--- a/uqdegree-app/src/App.css
+++ b/uqdegree-app/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  /*background-color: blanchedalmond;*/
+    background-image: url("Untitled.png");
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; 
 }
 
 .App-logo {
